--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,12 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+pre{
+  background: rgb(233, 233, 233);
+  padding: 5px;
+  border-radius: 4px;
+  font-style: italic;
+  font-weight: 500;
+  color: #000000;
+}
